Allow any guide to be used as long as it is reinitializable

--- a/examples/bayes_lr.ipynb
+++ b/examples/bayes_lr.ipynb
@@ -35,7 +35,7 @@
     "import numpyro.distributions as dist\n",
     "import numpyro_stein.stein.kernels as kernels\n",
     "from numpyro.infer.util import Predictive\n",
-    "from numpyro_stein.stein.autoguides import AutoDelta\n",
+    "from numpyro_stein.autoguides import AutoDelta\n",
     "from numpyro_stein.util import init_with_noise\n",
     "from numpyro_stein.stein.stein import SVGD\n",
     "from numpyro_stein.distributions.normal_mixture_distribution import NormalMixture\n",
@@ -129,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "banana\nSVGD 262.6: 100%|██████████| 3000/3000 [00:10<00:00, 292.19it/s]\n50.22365\ndiabetis\nSVGD 226.35: 100%|██████████| 3000/3000 [00:11<00:00, 258.62it/s]\n69.63957\ngerman\nSVGD 355.4: 100%|██████████| 3000/3000 [00:13<00:00, 226.81it/s]\n65.847916\nimage\nSVGD 583.71: 100%|██████████| 3000/3000 [00:14<00:00, 208.16it/s]\n71.91128\nringnorm\nSVGD 197.0: 100%|██████████| 3000/3000 [00:12<00:00, 241.96it/s]\n67.29388\nsplice\nSVGD 655.49: 100%|██████████| 3000/3000 [00:16<00:00, 183.54it/s]\n78.565254\ntwonorm\nSVGD 63.506: 100%|██████████| 3000/3000 [00:12<00:00, 233.72it/s]\n93.6621\nwaveform\nSVGD 135.58: 100%|██████████| 3000/3000 [00:12<00:00, 238.55it/s]\n81.10428\n"
+     "text": "banana\nSVGD 263.36: 100%|██████████| 3000/3000 [00:10<00:00, 289.18it/s]\n50.322723\ndiabetis\nSVGD 226.69: 100%|██████████| 3000/3000 [00:11<00:00, 251.64it/s]\n68.95238\ngerman\nSVGD 359.64: 100%|██████████| 3000/3000 [00:13<00:00, 223.29it/s]\n65.98759\nimage\nSVGD 589.03: 100%|██████████| 3000/3000 [00:14<00:00, 203.04it/s]\n72.08004\nringnorm\nSVGD 201.69: 100%|██████████| 3000/3000 [00:12<00:00, 237.80it/s]\n67.2023\nsplice\nSVGD 650.9: 100%|██████████| 3000/3000 [00:16<00:00, 180.88it/s]\n79.21224\ntwonorm\nSVGD 65.487: 100%|██████████| 3000/3000 [00:12<00:00, 234.59it/s]\n94.294975\nwaveform\nSVGD 137.32: 100%|██████████| 3000/3000 [00:12<00:00, 239.33it/s]\n81.1829\n"
     }
    ],
    "source": [
@@ -143,7 +143,7 @@
     "    print(name)\n",
     "    svgd = SVGD(model, guide, numpyro.optim.Adagrad(step_size=.05), ELBO(),\n",
     "            kernels.RBFKernel(), num_stein_particles=num_particles,\n",
-    "            repulsion_temperature=dataset['train']['input'].shape[0] ** -1 * 0.01)\n",
+    "            repulsion_temperature=dataset['train']['input'].shape[0] ** -1)\n",
     "    svgd_state, loss = svgd.run(rng_key, num_iterations, dataset['train']['input'], dataset['train']['class'])\n",
     "    print(test_accuracy(svgd_state.rng_key, dataset['train'], svgd.get_params(svgd_state)))"
    ]
